--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,9 @@ workflows:
   dockerfile_wizard:
     jobs:
       - build:
+          context: org-global
 
       - test_image:
+          context: org-global
           requires:
             - build
